<resources>
    <string name="LIB_GCM_PREF_CATEGORY1_TITLE">Settings</string>
    <string name="LIB_GCM_PREF_KEY_WILLSENDNOTIFICATION">lib_gcm_willSendNotification</string>
    <string name="LIB_GCM_PREF_KEY_WILLSENDNOTIFICATION_TITLE">Send me notifications</string>
    <string name="LIB_GCM_PREF_CATEGORY2_TITLE">Details</string>
    <string name="LIB_GCM_PREF_KEY_WILLPLAYSOUND">lib_gcm_willPlaySound</string>
    <string name="LIB_GCM_PREF_KEY_WILLPLAYSOUND_SUMMARY">Play sound when notifications come</string>
    <string name="LIB_GCM_PREF_KEY_WILLPLAYSOUND_TITLE">Sound</string>
    <string name="LIB_GCM_PREF_KEY_WILLVIBRATE">lib_gcm_willVibrate</string>
    <string name="LIB_GCM_PREF_KEY_WILLVIBRATE_SUMMARY">Vibration feedback for notifications</string>
    <string name="LIB_GCM_PREF_KEY_WILLVIBRATE_TITLE">Vibrate</string>
    <string name="LIB_GCM_GOOGLE_ACCOUNT_MISSING_INFO">Please login with your Google Account.</string>
    <string name="LIB_GCM_PREF_CATEGORY3_TITLE">Development</string>
    <string name="LIB_GCM_PREF_KEY_IS_TESTING">lib_gcm_is_testing</string>
    <string name="LIB_GCM_PREF_KEY_IS_TESTING_SUMMARY_TURE">In parameters url, test=1</string>
    <string name="LIB_GCM_PREF_KEY_IS_TESTING_SUMMARY_FALSE">In parameters url, test=0</string>
    <string name="LIB_GCM_PREF_KEY_IS_TESTING_TITLE">is testing</string>
    <string name="LIB_GCM_PREF_KEY_DOES_INCLUDE_SANDBOX">lib_gcm_does_include_sandbox</string>
    <string name="LIB_GCM_PREF_KEY_DOES_INCLUDE_SANDBOX_SUMMARY_TURE">url=https://sandbox.push.cybird.ne.jp/XXXX</string>
    <string name="LIB_GCM_PREF_KEY_DOES_INCLUDE_SANDBOX_SUMMARY_FALSE">url=https://push.cybird.ne.jp/XXXX</string>
    <string name="LIB_GCM_PREF_KEY_DOES_INCLUDE_SANDBOX_TITLE">include sandbox in urls</string>
    <string name="LIB_GCM_PREF_KEY_IS_NORMAL">lib_gcm_is_normal</string>
    <string name="LIB_GCM_PREF_KEY_IS_NORMAL_SUMMARY_TURE">act normally</string>
    <string name="LIB_GCM_PREF_KEY_IS_NORMAL_SUMMARY_FALSE">show bundle no matter what act is</string>
    <string name="LIB_GCM_PREF_KEY_IS_NORMAL_TITLE">validate act</string>
    <string name="LIB_GCM_DIALOG_TITLE">Agreement</string>
    <string name="LIB_GCM_DIALOG_AGREE">Agree</string>
    <string name="LIB_GCM_DIALOG_DECLINE">Decline</string>
    <string name="LIB_GCM_SENDERID">54022963415</string>
    <string name="lib_launcher_close_button_text">Close</string>
    <string name="lib_launcher_blank_message">サーバへ接続できません。</string>
    <string name="gree_environment">sandbox</string>
    <string name="app_id">4304</string>
    <string name="app_fullname">Barcode KANOJO</string>
    <string name="app_activity_package_name">jp.co.cybird.barcodekanojo</string>
    <string name="app_name">Barcode KANOJO</string>
    <string name="debug_map_key">0xrwNkcHK1y74K1yUD8KlSGREuF0GuOimaJKhIw</string>
    <string name="map_key">0NAamX5fwF1rRbOaJS0rOFRxa1NMGvpLBADKiXw</string>
    <string name="admob_publisher_id">a1525767b1eb00c</string>
    <string name="admob_mediation_id">5c23934ba80d45d4</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_dialog_ok">OK</string>
    <string name="common_dialog_cancel">Cancel</string>
    <string name="common_progress_dialog_message">Loading...</string>
    <string name="common_edit_close">Back</string>
    <string name="common_product_kanojo_name">Name</string>
    <string name="common_product_company">Company</string>
    <string name="common_product_name">Product</string>
    <string name="common_product_category">Category</string>
    <string name="common_product_barcode">Barcode</string>
    <string name="common_product_country">Country</string>
    <string name="common_product_location">Location</string>
    <string name="common_product_photo">Photo</string>
    <string name="common_product_comment">Comment</string>
    <string name="menu_common_refresh">Refresh</string>
    <string name="edit_photo_title">Moving and scaling</string>
    <string name="edit_photo_ok">Select</string>
    <string name="edit_photo_cancel">Cancel</string>
    <string name="top_log_in">Log In</string>
	<string name="sign_up_name">Name</string>
    <string name="sign_up_photo">Icon</string>
    <string name="sign_up_btn">Sign Up</string>
	<string name="connect">Connect</string>
    <string name="log_in">Log In</string>
    <string name="log_in_btn">Log In</string>
    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_enemy">Enemy Book</string>
    <string name="tab_kanojo">Kanojos</string>
    <string name="tab_map">Map</string>
    <string name="tab_scan">Scan</string>
    <string name="tab_webview">Notice</string>
    <string name="tab_setting">Setting</string>
    <string name="stats">Stats</string>
    <string name="dashboard_activities">Activities</string>
    <string name="menu_dashboard_settings">Options</string>
    <string name="kanojos_your_kanojos">Your Kanojos</string>
    <string name="kanojos_just_friend">Just Friend</string>
    <string name="kanojos_ranking">Ranking</string>
    <string name="kanojos_search_your_kanojos">Result in your Kanojos</string>
    <string name="kanojos_search_just_friend">Result in just Friend</string>
    <string name="kanojos_search_label">Kanojo Search</string>
    <string name="kanojos_search_hint">Input Keyword</string>
    <string name="kanojos_search_toast">Search by</string>
    <string name="menu_kanojos_search">Search</string>
	<string name="kanojo_info_title">Product Info</string>
    <string name="kanojo_info_close">Back</string>
    <string name="kanojo_info_edit">Edit</string>
    <string name="kanojo_info_country">Country  :  </string>
    <string name="kanojo_info_barcode">Barcode  :  </string>
    <string name="kanojo_info_category">Category :  </string>
    <string name="kanojo_info_scanned">Scanned  :  </string>
    <string name="kanojo_room_close">Close</string>
    <string name="kanojo_room_info">Info</string>
    <string name="kanojo_room_dialog_progress">Loading...</string>
    <string name="kanojo_items_store">Tickets</string>
    <string name="kanojo_items_gift">Items</string>
    <string name="kanojo_items_date">Date</string>
    <string name="enemy_your_enemies">Your Enemies</string>
    <string name="enemy_close">Close</string>
    <string name="enemy_his_enemies">His Kanojos</string>
    <string name="enemy_activities">Activities</string>
    <string name="scan_notice_1">Reflecting barcode according to the red line.</string>
    <string name="scan_notice_2">It is automatically scanned.</string>
    <string name="scan_result_close">Back</string>
    <string name="scan_result_ok">OK</string>
    <string name="scan_result_yes">Yes</string>
    <string name="scan_result_cancel">Cancel</string>
    <string name="scan_result_add_friend">Add List</string>
    <string name="scan_result_edit_productinfo">Edit product information</string>
    <string name="scan_others_close">Back</string>
    <string name="scan_others_add_friend">Add List</string>
    <string name="scan_others_edit_productinfo">Edit product information</string>
    <string name="scan_kanojo_generate_save">Generate</string>
    <string name="userprofile_stamina">STAMINA</string>
    <string name="userprofile_kanojos">KANOJOS</string>
    <string name="userprofile_ticket">TICKETS</string>
    <string name="userprofile_b_coin">B-COIN</string>
    <string name="row_more">More</string>
    <string name="row_more_loading">Loading...</string>
    <string name="row_stats_kanjos">Your Kanjos</string>
    <string name="row_stats_scanned">Total Scanned</string>
    <string name="setting_name">Barcode KANOJO Options</string>
    <string name="setting_account">Account</string>
    <string name="setting_account_change">Edit account information</string>
    <string name="setting_log_out">Log Out</string>
    <string name="setting_common">Change Sharing Setting</string>
    <string name="setting_legal">Site Policy</string>
    <string name="setting_legal_privacy">Privacy Policy</string>
    <string name="setting_legal_terms">Terms Of Use</string>
    <string name="setting_about">About</string>
    <string name="setting_about_rules">The Rules</string>
    <string name="setting_about_barcodekanojo">Barcode KANOJO</string>
    <string name="setting_about_team">Team</string>
    <string name="setting_support">Support</string>
    <string name="setting_support_mail">General</string>
    <string name="setting_support_business">Business Inquiry</string>
    <string name="setting_support_kddi">KDDI</string>
    <string name="edit_account_title">Edit Account Information</string>
    <string name="edit_account_name">Name</string>
    <string name="edit_account_photo">Icon</string>
    <string name="edit_account_dialog_progress">Updating...</string>
    <string name="edit_account_update_btn">Update</string>
    <string name="edit_account_update_done">Saved new account.</string>
    <string name="edit_account_update_failed">Did not change the account information.</string>
    <string name="edit_account_device_title">Information for model changes</string>
    <string name="edit_account_delete_btn">Delete</string>
    <string name="delete_account_message">Delete Account Successful</string>
    <string name="user_account_title">Account Information</string>
    <string name="user_account_name">User Name</string>
    <string name="user_account_password">Password</string>
    <string name="user_account_re_password">Password Confirmation</string>
    <string name="user_account_email">E-mail</string>
    <string name="user_account_gender">Gender</string>
    <string name="user_account_birthday">Birthday</string>
    <string name="user_account_icon">Icon</string>
    <string name="password_change_title">Change Password</string>
    <string name="password_change_current">Current Password</string>
    <string name="password_change_password">New Password</string>
    <string name="password_change_re_password">New Password Confirmation</string>
    <string name="password_change_btn">Check</string>
    <string name="kanojo_shop_buy">Purchase</string>
    <string name="privacy_ok">Agree</string>
    <string name="privacy_no">Not Agree</string>
    <string name="error_internet">An error occurred while communicating with the server.</string>
    <string name="error_external_storage">Can not use SD Card</string>
    <string name="error_cache_directory">Memory capacity is lacking</string>
    <string name="error_out_of_memory">Memory capacity of the terminal is insufficient. Please reboot</string>
    <string name="error_gree_account">GREE</string>
    <string name="privacy_info_text">For external transmission of personal information\10 \10 Your personal information to be sent as follows. Please check it.\10 \10 ■Personal information to be sent\10 Your e-mail address and location information\10 \10 ■The purpose of sending\10 ・E-mail address\10 Account for performing takeover\10 \10 ・Location information\10 KANOJO face is generated by the location information when barcode scanning.\10 \10 In addition, there is no use in it other than its intended purpose.\10 \10 ■Destination\10 Server of CYBIRD Co.Ltd.\10 In addition, We will not be provided to third parties other than those described above.\10</string>
    <string name="blank_name_L012">Automatic generation</string>
    <string name="user_account_login_password">Password</string>
	<string name="server_url">Server URL</string>
	<string name="server_port">Server Port</string>
	<string name="sign_up">Sign Up</string>
	<string name="server_settings">Server Settings</string>
	<string name="use_https">Use HTTPS</string>
	<string name="setting_category_notifications">Notifications</string>
	<string name="setting_category_user">User Settings</string>
	<string name="setting_category_miscellaneous">Miscellaneous</string>
	<string name="common_logout">Log Out</string>
</resources>