<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/top_bg">
	<TextView
		android:id="@+id/top_server_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_above="@id/progressbar"/>

	<ProgressBar
		android:id="@+id/progressbar"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_centerVertical="true"
		android:layout_marginTop="30dp" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/progressbar"
		android:layout_alignParentBottom="true"
		android:gravity="center"
		android:orientation="vertical">
		<Button
			android:id="@+id/launch_connect"
			style="@style/btn_default"
			android:text="@string/connect" />
		<Button
			android:id="@+id/top_log_in"
			style="@style/btn_default"
			android:layout_marginTop="20dp"
			android:text="@string/log_in" />
		<Button android:id="@+id/top_sign_up" android:layout_marginTop="20dp" android:text="@string/sign_up" style="@style/btn_default"/>
		<Button android:id="@+id/top_config_server" android:layout_marginTop="20dp" android:text="@string/server_settings" style="@style/btn_default"/>
	</LinearLayout>
</RelativeLayout>
