<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:EditItemView="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/edit_bg"
	android:orientation="vertical">
    <RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/common_title_height"
		android:background="@drawable/common_title_bg">
        <ImageView
			android:layout_width="wrap_content"
			android:layout_height="@dimen/common_title_logo_height"
			android:layout_centerInParent="true"
			android:adjustViewBounds="true"
			android:scaleType="fitCenter"
			android:src="@drawable/common_logo"/>
        <Button
			android:id="@+id/password_change_close_btn"
			style="@style/btn_navi"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:text="@string/common_edit_close"/>
    </RelativeLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/edit_bg" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView
				style="@style/txt_notice_input"
				android:layout_marginTop="8dp"
				android:text="@string/password_change_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="start"/>
            <jp.co.cybird.barcodekanojoForGAM.view.EditItemView
				android:id="@+id/password_change_current"
				android:layout_width="match_parent"
				android:layout_height="@dimen/row_kanojo_edit_txt_height"
				android:layout_marginTop="@dimen/row_kanojo_edit_separator_height"
				android:background="@drawable/row_kanojo_edit_bg_top"
				EditItemView:key="@string/password_change_current"
				EditItemView:textColor="@color/editable_color"/>
            <jp.co.cybird.barcodekanojoForGAM.view.EditItemView
				android:id="@+id/password_change_new"
				android:layout_width="match_parent"
				android:layout_height="@dimen/row_kanojo_edit_txt_height"
				android:background="@drawable/row_kanojo_edit_bg_middle"
				EditItemView:key="@string/password_change_password"
				EditItemView:textColor="@color/editable_color"/>
            <jp.co.cybird.barcodekanojoForGAM.view.EditItemView
				android:id="@+id/password_change_re_new"
				android:layout_width="match_parent"
				android:layout_height="@dimen/row_kanojo_edit_txt_height"
				android:background="@drawable/row_kanojo_edit_bg_bottom"
				EditItemView:key="@string/password_change_re_password"
				EditItemView:textColor="@color/editable_color"/>
            <Button
				android:id="@+id/password_change_check_btn"
				style="@style/btn_default"
				android:layout_marginTop="@dimen/row_kanojo_edit_separator_height"
				android:layout_marginBottom="@dimen/row_kanojo_edit_separator_height"
				android:text="@string/password_change_btn"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
