<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:EditItemView="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textColor="#000000" android:id="@+id/textView1" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/privacy_info_text" android:layout_weight="1"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:layout_gravity="center" android:id="@+id/kanojo_privacy_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy_ok" android:layout_weight="1"/>
        <Button android:layout_gravity="center" android:id="@+id/kanojo_privacy_no" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy_no" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
